--- a/src/main/resources/templates/banks/form.html
+++ b/src/main/resources/templates/banks/form.html
@@ -3,16 +3,16 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<!--/*@thymesVar id="object" type="com.proskurnia.VOs.PersonVO"*/-->
+<!--/*@thymesVar id="personVO" type="com.proskurnia.VOs.PersonVO"*/-->
 <head>
     <meta charset="UTF-8"/>
-    <title th:text="${object.name == null} ? #{new.owner} : ${object.name}">Title</title>
+    <title th:text="${personVO.name == null} ? #{new.owner} : ${personVO.name}">Title</title>
     <link rel="stylesheet" href="../../resources/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"
           type="text/css"/>
     <link rel="stylesheet" href="../../resources/css/form.css" th:href="@{/css/form.css}" type="text/css"/>
 </head>
 <body>
-<form th:object="${object}" th:action="@{save}" action="#" method="post">
+<form th:object="${personVO}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
         <input class="hidden" type="checkbox" th:field="*{isOwner}"/>
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label for="title" th:text="#{person.title}"></label>
-            <select data-live-search="true" class="selectpicker form-control" id="title" th:field="*{titleId}" th:each="title : ${titles}">
+            <select class="form-control" id="title" th:field="*{titleId}" th:each="title : ${titles}">
                 <option th:value="${title.key}" th:text="${title.value}"></option>
             </select>
         </div>
@@ -64,8 +64,12 @@
         </div>
     </div>
 </form>
+<!--<div class="etalon hidden list-container">-->
+    <!--<input class="form-control" type="text"/>-->
+    <!--<button type="button" class="delete-input glyphicon glyphicon-remove btn btn-danger"></button>-->
+<!--</div>-->
 </body>
 <script src="../../resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
 <script src="../../resources/js/bootstrap.min.js" th:src="@{/js/bootstrap.js}"></script>
-<script src="../../resources/js/bootstrap-select.js" th:src="@{/js/bootsrap-select.js}"></script>
+<!--<script src="../../resources/js/form.js" th:src="@{/js/form.js}"></script>-->
 </html>
