--- a/src/main/resources/templates/owner-accounts/form.html
+++ b/src/main/resources/templates/owner-accounts/form.html
@@ -3,10 +3,10 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<!--/*@thymesVar id="object" type="com.proskurnia.VOs.PersonVO"*/-->
+<!--/*@thymesVar id="object" type="com.proskurnia.VOs.OwnerAccountVO"*/-->
 <head>
     <meta charset="UTF-8"/>
-    <title th:text="${object.name == null} ? #{new.owner} : ${object.name}">Title</title>
+    <title th:text="${object.id == null} ? #{new.owner} : ${object.name}">Title</title>
     <link rel="stylesheet" href="../../resources/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"
           type="text/css"/>
     <link rel="stylesheet" href="../../resources/css/form.css" th:href="@{/css/form.css}" type="text/css"/>
@@ -14,17 +14,14 @@
 <body>
 <form th:object="${object}" th:action="@{save}" action="#" method="post">
     <div class="container">
-        <input type="hidden" th:field="*{id}"/>
-        <input class="hidden" type="checkbox" th:field="*{isOwner}"/>
         <div class="form-group">
-            <label for="passport" th:text="#{person.id}"></label>
-            <input class="form-control" id="passport" th:field="*{passport}"/>
+            <label for="number" th:text="#{bank.account.number}"></label>
+            <div class="alert-danger" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">Id Error</div>
+            <input class="form-control" id="number" th:field="*{id}" th:readonly="${object.id == null}"/>
         </div>
         <div class="form-group">
-            <label for="title" th:text="#{person.title}"></label>
-            <select data-live-search="true" class="selectpicker form-control" id="title" th:field="*{titleId}" th:each="title : ${titles}">
-                <option th:value="${title.key}" th:text="${title.value}"></option>
-            </select>
+            <label for="balance" th:text="#{account.balance}"></label>
+            <input class="form-control" id="balance" th:field="*{balance}" th:readonly="${object.id == null}">
         </div>
         <div class="form-group">
             <label for="name" th:text="#{person.name}"></label>
@@ -64,6 +61,10 @@
         </div>
     </div>
 </form>
+<!--<div class="etalon hidden list-container">-->
+    <!--<input class="form-control" type="text"/>-->
+    <!--<button type="button" class="delete-input glyphicon glyphicon-remove btn btn-danger"></button>-->
+<!--</div>-->
 </body>
 <script src="../../resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
 <script src="../../resources/js/bootstrap.min.js" th:src="@{/js/bootstrap.js}"></script>
