--- a/src/main/resources/templates/owners/list.html
+++ b/src/main/resources/templates/owners/list.html
@@ -12,7 +12,7 @@
           type="text/css"/>
 </head>
 <body>
-<table id="owners" class="table table-striped">
+<table id="owners" class="table table-striped dataTable">
     <thead>
     <tr>
         <td th:text="#{person.id}">ID</td>
@@ -23,6 +23,7 @@
         <td th:text="#{email}"></td>
     </tr>
     </thead>
+    <!--/*@thymesVar id="person" type="com.proskurnia.VOs.PersonVO"*/-->
     <tbody th:each="person : ${owners}">
     <tr>
         <td th:text="${person.passport}"></td>
@@ -44,5 +45,5 @@
 <script src="../../resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
 <script src="../../resources/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 <script src="../../resources/js/datatables.min.js" th:src="@{/js/datatables.min.js}"></script>
-<script src="../../resources/js/owners.js" th:src="@{/js/owners.js}"></script>
+<script src="../../resources/js/all-page.js" th:src="@{/js/all-page.js}"></script>
 </html>
