--- a/src/main/resources/templates/apartments/form.html
+++ b/src/main/resources/templates/apartments/form.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<!--/*@thymesVar id="personVO" type="com.proskurnia.VOs.PersonVO"*/-->
+      xmlns:th="http://www.thymeleaf.org">
 <head>
+    <!--/*@thymesVar id="object" type="com.proskurnia.VOs.ApartmentVO"*/-->
     <meta charset="UTF-8"/>
-    <title th:text="${personVO.name == null} ? #{new.owner} : ${personVO.name}">Title</title>
+    <title th:text="${object.roomNumber ?: #{register.apartment}} + ' | ' +${object.address}">Title</title>
     <th:block th:fragment="template :: css"></th:block>
 </head>
 <body>
-<form th:object="${personVO}" th:action="@{save}" action="#" method="post">
+<form th:object="${object}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
-        <input class="hidden" type="checkbox" th:field="*{isOwner}"/>
+        <input type="hidden" th:field="*{buildingId}"/>
         <div class="form-group">
-            <label for="passport" th:text="#{person.id}"></label>
-            <input class="form-control" id="passport" th:field="*{passport}"/>
+            <label for="address" th:text="#{address}"></label>
+            <input class="form-control" id="address" th:field="*{address}"/>
         </div>
         <div class="form-group">
             <label for="title" th:text="#{person.title}"></label>
