--- a/src/main/resources/templates/buildings/form.html
+++ b/src/main/resources/templates/buildings/form.html
@@ -5,54 +5,31 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8"/>
-    <title th:text="${building.address == null} ? #{new.building} : ${personVO.name}">Title</title>
-    <link rel="stylesheet" href="../../resources/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"
-          type="text/css"/>
-    <link rel="stylesheet" href="../../resources/css/form.css" th:href="@{/css/form.css}" type="text/css"/>
+    <title th:text="${object.address ?: #{register.building}}">Title</title>
+    <th:block th:fragment="template :: css"></th:block>
 </head>
 <body>
-<form th:object="${building}" th:action="@{save}" action="#" method="post">
+<!--/*@thymesVar id="object" type="com.proskurnia.VOs.BuildingVO"*/-->
+<form th:object="${object}" th:action="@{save}" action="#" method="post">
     <div class="container">
         <input type="hidden" th:field="*{id}"/>
+        <input type="hidden" th:field="*{ownerAccountId}"/>
         <div class="form-group">
             <label for="address" th:text="#{address}"></label>
             <div class="alert-danger" th:errors="*{address}">Address Error</div>
             <input class="form-control" id="address" th:field="*{address}"/>
         </div>
         <div class="form-group">
-            <label for="title" th:text="#{person.title}"></label>
-            <select class="form-control" id="title" th:field="*{titleId}" th:each="title : ${titles}">
-                <option th:value="${title.key}" th:text="${title.value}"></option>
-            </select>
+            <label for="owner" th:text="#{owner}"></label>
+            <input class="form-control" id="owner" th:field="*{ownerName}" th:readonly="true"/>
         </div>
         <div class="form-group">
-            <label for="name" th:text="#{person.name}"></label>
-            <div class="alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
-            <input class="form-control" id="name" th:field="*{name}"/>
+            <label for="comment" th:text="#{comment}"></label>
+            <textarea class="form-control" id="comment" th:field="*{acquisitionDate}"/>
         </div>
         <div class="form-group">
-            <label for="caf" th:text="#{person.CAF}"></label>
-            <input class="form-control" id="caf" th:field="*{caf}"/>
-        </div>
-        <div class="form-group">
-            <label for="address" th:text="#{address}"></label>
-            <input class="form-control" id="address" th:field="*{address}"/>
-        </div>
-        <div class="form-group">
-            <label for="phone1" th:text="${#{phone} + ' 1'}"></label>
-            <input class="form-control" id="phone1" th:field="*{phone1}"/>
-        </div>
-        <div class="form-group">
-            <label for="phone2" th:text="${#{phone} + ' 2'}"></label>
-            <input class="form-control" id="phone2" th:field="*{phone2}"/>
-        </div>
-        <div class="form-group">
-            <label for="email1" th:text="${#{email} + ' 1'}"></label>
-            <input class="form-control" id="email1" th:field="*{email1}"/>
-        </div>
-        <div class="form-group">
-            <label for="email2" th:text="${#{email} + ' 2'}"></label>
-            <input class="form-control" id="email2" th:field="*{email2}"/>
+            <label for="acquisition-date" th:text="#{acquisition.date}"></label>
+            <input class="form-control" id="acquisition-date" th:field="*{acquisitionDate}"/>
         </div>
         <hr/>
         <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
@@ -63,12 +40,6 @@
         </div>
     </div>
 </form>
-<!--<div class="etalon hidden list-container">-->
-    <!--<input class="form-control" type="text"/>-->
-    <!--<button type="button" class="delete-input glyphicon glyphicon-remove btn btn-danger"></button>-->
-<!--</div>-->
+<th:block th:fragment="template :: js"></th:block>
 </body>
-<script src="../../resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
-<script src="../../resources/js/bootstrap.min.js" th:src="@{/js/bootstrap.js}"></script>
-<!--<script src="../../resources/js/form.js" th:src="@{/js/form.js}"></script>-->
 </html>
