--- a/src/main/resources/templates/owner-accounts/form.html
+++ b/src/main/resources/templates/owner-accounts/form.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+>
 <!--/*@thymesVar id="object" type="com.proskurnia.VOs.OwnerAccountVO"*/-->
 <head>
     <meta charset="UTF-8"/>
-    <title th:text="${object.id == null} ? #{new.owner} : ${object.name}">Title</title>
-    <link rel="stylesheet" href="../../resources/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"
-          type="text/css"/>
-    <link rel="stylesheet" href="../../resources/css/form.css" th:href="@{/css/form.css}" type="text/css"/>
+    <title th:text="${object.id}">Title</title>
+    <th:block th:fragment="template :: css"></th:block>
 </head>
 <body>
 <form th:object="${object}" th:action="@{save}" action="#" method="post">
     <div class="container">
+        <input type="hidden" th:field="*{ownerId}"/>
+        <input type="hidden" th:name="isNew" th:value="${empty object.id ? true : false}"/>
         <div class="form-group">
             <label for="number" th:text="#{bank.account.number}"></label>
             <div class="alert-danger" th:if="${#fields.hasErrors('id')}" th:errors="*{id}">Id Error</div>
@@ -24,36 +23,13 @@
             <input class="form-control" id="balance" th:field="*{balance}" th:readonly="${object.id == null}">
         </div>
         <div class="form-group">
-            <label for="name" th:text="#{person.name}"></label>
-            <div class="alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</div>
-            <input class="form-control" id="name" th:field="*{name}"/>
-        </div>
-        <div class="form-group">
-            <label for="caf" th:text="#{person.CAF}"></label>
-            <input class="form-control" id="caf" th:field="*{caf}"/>
-        </div>
-        <div class="form-group">
-            <label for="address" th:text="#{address}"></label>
-            <input class="form-control" id="address" th:field="*{address}"/>
-        </div>
-        <div class="form-group">
-            <label for="phone1" th:text="${#{phone} + ' 1'}"></label>
-            <input class="form-control" id="phone1" th:field="*{phone1}"/>
-        </div>
-        <div class="form-group">
-            <label for="phone2" th:text="${#{phone} + ' 2'}"></label>
-            <input class="form-control" id="phone2" th:field="*{phone2}"/>
-        </div>
-        <div class="form-group">
-            <label for="email1" th:text="${#{email} + ' 1'}"></label>
-            <input class="form-control" id="email1" th:field="*{email1}"/>
-        </div>
-        <div class="form-group">
-            <label for="email2" th:text="${#{email} + ' 2'}"></label>
-            <input class="form-control" id="email2" th:field="*{email2}"/>
+            <label for="bank" th:text="#{person.name}"></label>
+            <select class="form-control" id="bank" th:field="*{bankId}" th:each="bank : ${banks}">
+                <option th:value="${bank.id}" th:text="${bank.name}"></option>
+            </select>
         </div>
         <hr/>
-        <div th:if="${#fields.hasGlobalErrors()}" th:each="error : ${#fields.globalErrors()}">
+        <div th:each="error : ${#fields.globalErrors()}">
             <div class="alert alert-danger" th:text="${error}"></div>
         </div>
         <div class="pull-right">
@@ -61,12 +37,6 @@
         </div>
     </div>
 </form>
-<!--<div class="etalon hidden list-container">-->
-    <!--<input class="form-control" type="text"/>-->
-    <!--<button type="button" class="delete-input glyphicon glyphicon-remove btn btn-danger"></button>-->
-<!--</div>-->
+<th:block th:fragment="template :: js"></th:block>
 </body>
-<script src="../../resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
-<script src="../../resources/js/bootstrap.min.js" th:src="@{/js/bootstrap.js}"></script>
-<script src="../../resources/js/bootstrap-select.js" th:src="@{/js/bootsrap-select.js}"></script>
 </html>
