--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Title</title>
     <th:block th:fragment="css">
         <link rel="stylesheet" href="/resources/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}"
@@ -18,11 +17,11 @@
 </head>
 <body>
 <th:block th:fragment="js">
-    <script src="/resources/resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
-    <script src="/resources/js/bootstrap.min.js" th:src="@{/js/bootstrap.js}"></script>
+    <script src="/resources/js/jquery-3.2.0.min.js" th:src="@{/js/jquery-3.2.0.min.js}"></script>
+    <script src="/resources/js/datatables.min.js" th:src="@{/js/datatables.min.js}"></script>
+    <script src="/resources/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
     <script src="/resources/js/bootstrap-select.js" th:src="@{/js/bootstrap-select.js}"></script>
     <script src="/resources/js/jquery-datepicker.min.js" th:src="@{/js/jquery-datepicker.min.js}"></script>
-    <script src="/resources/js/datatables.min.js" th:src="@{/js/datatables.min.js}"></script>
 </th:block>
 </body>
 </html>
