--- a/src/main/resources/templates/equipments/form.html
+++ b/src/main/resources/templates/equipments/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title th:text="${personVO.name == null} ? #{new.owner} : ${personVO.name}">Title</title>
-    <th:block th:fragment="template :: css"></th:block>
+    <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
 <!--/*@thymesVar id="object" type="com.proskurnia.VOs.EquipmentVO"*/-->
@@ -33,6 +33,6 @@
         </div>
     </div>
 </form>
-<th:block th:fragment="template :: js"></th:block>
+<th:block th:replace="template :: js"></th:block>
 </body>
 </html>
