--- a/src/main/resources/templates/owner-accounts/list.html
+++ b/src/main/resources/templates/owner-accounts/list.html
@@ -5,8 +5,8 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8"/>
-    <title th:text="${#{bank.accounts}+' | '+${owner.name}}">Title</title>
-    <th:block th:fragment="template :: css"></th:block>
+    <title th:text="#{bank.accounts}">Title</title>
+    <th:block th:replace="template :: css"></th:block>
 </head>
 <body>
 <table id="owners" class="table table-striped dataTable">
@@ -27,5 +27,5 @@
     </tbody>
 </table>
 </body>
-<th:block th:fragment="template :: js"></th:block>
+<th:block th:replace="template :: js"></th:block>
 </html>
